kubernetes/apps/selfhosted/paperless/ai/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-home-ai
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "paperless-home-ai"
    hajimari.io/group: "home"
    hajimari.io/icon: "file-multiple"
spec:
  hostnames:
    - "dms-ai.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-ai
          port: 3000
